--- a/helm-webapp/values.yaml
+++ b/helm-webapp/values.yaml
@@ -6,5 +6,5 @@ configmap:
     CUSTOM_HEADER: 'This app was deployed with helm!'
 
 image:
-  name: eyesoncloud/webapp
+  name: syed/webapp
   tag: 47
